add message for null foreach iteration variables